--- a/index.html
+++ b/index.html
@@ -35,10 +35,23 @@
       </div>
     </nav>
 
+    <section class="carousel">
+       <div class="carousel carousel-slider center" data-indicators="true">
+    <div class="carousel-fixed-item center">
+    </div>
+    <a class="carousel-item" href="#one!"><img src="assets/img/slide1.jpg"></a>
+    <a class="carousel-item" href="#two!"><img src="assets/img/slide2.jpg"></a>
+    <a class="carousel-item" href="#three!"><img src="assets/img/slide3.jpg"></a>
+    </div>
+  </div>
+    </section>
+    
+
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.0/js/materialize.min.js"></script>
+<script src="assets/js/app.js"></script>
 </body>
 </html>
