--- a/index.html
+++ b/index.html
@@ -42,11 +42,113 @@
     <a class="carousel-item" href="#one!"><img src="assets/img/slide1.jpg"></a>
     <a class="carousel-item" href="#two!"><img src="assets/img/slide2.jpg"></a>
     <a class="carousel-item" href="#three!"><img src="assets/img/slide3.jpg"></a>
-    </div>
+  </div>
   </div>
     </section>
-    
+    <section class="circles">
+      <div class="container cir">
+        <div class="row">
+          <div class="col m3 s12">
+            <img class="circle" src="assets/img/skin_care_1_thumb.jpg" alt="skin care">
+            <h6 class="center">SKIN CARE</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus vero earum non asperiores adipisci totam aliquid hic.</p>
+            <a href="#">READ MORE...</a>
+          </div>
+          <div class="col m3 s12">
+            <img class="circle" src="assets/img/spa_ treatments_thumb.jpg" alt="spa treatments">
+            <h6 class="center">SPA TREATMENTS</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus vero earum non asperiores adipisci totam aliquid hic.</p>
+            <a href="#">READ MORE...</a>
+          </div>
+          <div class="col m3 s12">
+            <img class="circle" src="assets/img/aromatherapy_1_thumb.jpg" alt="aromatherapy">
+            <h6 class="center">AROMATHERAPY</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus vero earum non asperiores adipisci totam aliquid hic.</p>
+            <a href="#">READ MORE...</a>
+          </div>
+          <div class="col m3 s12">
+            <img class="circle" src="assets/img/massage_thumb.jpg" alt="massage">
+            <h6 class="center">MASSAGE</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus vero earum non asperiores adipisci totam aliquid hic.</p>
+            <a href="#">READ MORE...</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
+ <section class="welcome">
+      <div class="container">
+        <div class="row">
+          <div class="col m5 s12">
+            <img class="towels" src="assets/img/welcom_thumb.jpg" alt="white towels and stones">
+          </div>
+          <div class="col m7 s12">
+            <h5 class="welcomeText">WELCOME TO BEAUTY & HAIR</h5>
+            <p>Maecenas sit amet tincidunt elit.  Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+            Nulla facilisi. Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</p>
+            <ul>
+              <li>✽ Class aptent taciti sociosqu ad litora torquent per conubia nostra</li>
+              <li>✽ Sed ut perspiciatis unde omnis istes err sit voluptatem accusantium</li>
+              <li>✽ Totam rem aperiam, eaque ipsa uae ab illo inventore veritatis et quasi</li>
+              <li>✽ Aliquam ac egestas dui. Vestibulum quis magna eu elit mollis cursus vel</li>
+              <li>✽ Mauris consectetur, elit ac gaucibus commodo, ante dolor consectetur liber</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col m6 s12">
+            <h5 class="right">ABOUT US</h5><br>
+            <hr class="lines">
+            <div class="content">
+              <img class="beds" src="assets/img/home1.jpg" alt="massage beds">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet beatae provident repellendus consequuntur culpa repellat excepturi sed dolor deleniti, accusantium, fuga tenetur doloremque odit quaerat possimus nulla voluptatibus? Assumenda, porro.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit natus rem quisquam eaque beatae repellendus consequatur, dolor animi excepturi explicabo hic repellat, ab deserunt dolores ratione, quos fuga tenetur iusto!</p>
+            </div>
+          </div>
+          <div class="col m6 s12">
+            <h5 class="left">GIFT PROGRAM</h5><br>
+            <hr class="lines2">
+            <div class="content">
+              <img class="flowers" src="assets/img/home2.jpg" alt="love flowers">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet beatae provident repellendus consequuntur culpa repellat excepturi sed dolor deleniti, accusantium, fuga tenetur doloremque odit quaerat possimus nulla voluptatibus? Assumenda, porro.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores officiis culpa, alias sed perferendis dolorum eaque ex voluptas in, dolores pariatur. Vitae consequatur ex non voluptate, rerum, aliquam nam porro.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="follow">
+        <div class="row">
+          <div class="col m6 s12">
+            <h6>FOLLOW US</h6>
+            <img class="circle" src="assets/img/facebook-logo-webtreatsetc.png" alt="facebook">
+            <img class="circle" src="assets/img/google-g-logo-webtreatsetc.png" alt="google">
+            <img class="circle" src="assets/img/twitter-bird3-webtreatsetc (1).png" alt="twiter">
+            <img class="circle" src="assets/img/rss-basic-webtreatsetc.png" alt="rss">
+          </div>
+          <div class="col m2 s12">
+            <h6>PEOPLE ARE TALKING</h6>
+            <p class="thing">"</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut neque, quas repellat laboriosam. Repellat natus ut commodi odit nihil sapiente et facilis rem iure obcaecati corporis culpa voluptatibus, asperiores quis.</p>
+          </div>
+          <div class="col m3 s12">
+            <h6>CONTACT US</h6>
+            <p>TOLL FREE: 1 800 987 65 43</p><span>E-mail:</span>
+            <a href="">email@demolink.org</a>
+            <h6>OUR ADDRESS</h6>
+            <p>17600 Yonge Biggest St, Toronto, L3Y 4Z1</p>
+          </div>
+        </div>
+        <div class="row center">
+            <div class="divider"></div>
+          <p>DISCLAIMER: Revolutionary hair color fortifies every strand giving you shinier, healthier-looking hair & amazing base color paired with hints of red high & low-lighta for a sultry color with amazing dimension.</p>
+        </div>
+      </div>
+    </footer>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
